# JLCEDA2KICAD

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_zh-CN.md  THIRD_PARTY_NOTICES.md  metadata.json  offline-requirements-win-x64-cp311.txt  offline-wheel-record-exceptions.json  plugin.json  plugin_bootstrap.py  plugin_entry.py  pyproject.toml  requirements.txt
docs/: DEVELOPMENT.md  MANUAL_TEST_CHECKLIST.md
scripts/: __init__.py  build_package.py  build_repository_site.py  check_release.py  github_releases.py  install_dev.ps1  offline_vendor.py  pcm_repository.py  publish_release.py  release_policy.py  render_icons.py  smoke_offline_runtime.py  uninstall_dev.ps1
tests/: test_absolute_backup.py  test_application.py  test_artifact_rewrite.py  test_backup.py  test_conflicts.py  test_distribution_cli.py  test_distribution_docs.py  test_easyeda_cli.py  test_footprint_preview.py  test_github_releases.py  test_global_import_service.py  test_global_libraries.py  test_import_service.py  test_import_transaction.py  test_import_validation.py  test_library_tables.py  test_library_target_widget.py  test_live_conversion.py  test_main_window.py  test_models.py  test_offline_package.py  test_offline_vendor.py  test_output_discovery.py  test_packaging.py  test_pcm_repository.py  test_plugin_bootstrap.py  test_plugin_installation.py  test_preview_widgets.py  test_process_controller.py  test_project_context.py  test_release_policy.py  test_release_workflow.py  test_runtime_support.py  test_settings_history.py  test_sexpr.py  test_smoke_offline_runtime.py  test_validation.py  (+1 more)
(+42 files in other folders)
